// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox controlled input behaviour for input should allow updating of the checked state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should allow updating of the checked state 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should correctly invoke onChange and retain its unchecked state when clicked 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;

exports[`Checkbox controlled input behaviour for input should correctly invoke onChange and retain its unchecked state when clicked 2`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;

exports[`Checkbox should render the checkbox 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with a complex label 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Complex Label With 5 Sub Children"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      <div>
        Complex Label
        <span>
          <a
            href="https://example.com"
          >
             With
          </a>
          <span>
            5
          </span>
        </span>
        <span>
          Sub
          <span>
             Children 
          </span>
        </span>
      </div>
    </label>
    
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with a description 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      id="checkbox-id"
      name="checkbox-name"
      role="presentation"
    />
    <div
      class="googlesitekit-component-gm3_checkbox__content"
    >
      <label
        for="checkbox-id"
        id="checkbox-id-label"
      >
        Checkbox Label
      </label>
      <div
        class="googlesitekit-component-gm3_checkbox__description"
      >
        Checkbox description
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with disabled state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <md-checkbox
      aria-disabled="true"
      aria-label="Checkbox Label"
      aria-labelledby="checkbox-id-label"
      disabled=""
      id="checkbox-id"
      internals-disabled=""
      name="checkbox-name"
      role="presentation"
    />
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;

exports[`Checkbox should render the checkbox with loading state 1`] = `
<div>
  <div
    class="googlesitekit-component-gm3_checkbox"
  >
    <div
      class="googlesitekit-component-gm3_checkbox--loading"
    >
      <span
        class="spinner"
        style="display: inline-block; float: none; margin-top: 0px; visibility: visible;"
      />
    </div>
    <label
      for="checkbox-id"
      id="checkbox-id-label"
    >
      Checkbox Label
    </label>
    
  </div>
</div>
`;
